modification dans le backend & frontend

--- a/logebien_front_end-lastUpdate/src/app/consulter-paiement/consulter-paiement.component.html
+++ b/logebien_front_end-lastUpdate/src/app/consulter-paiement/consulter-paiement.component.html
@@ -7,7 +7,7 @@
           <h2 class="name">Logebien</h2>
           <div>tunis , Tunisie</div>
           
-          <div><a href="mailto:Logebien@contact.com">Logebien@contact.com</a></div>
+          <div><a href="mailto:Logebien@contact.com">Logebiencontact.com</a></div>
         </div>
      
       </header>
@@ -87,8 +87,7 @@
       routerLink="/consulter-annonce/{{contratInfos.annonce.id}}"
       >http://localhost:4200/consulter-annonce/{{contratInfos.annonce.id}}</a>
     
-      <qrcode 
-       [qrdata]="'http://localhost:4200/consulter-annonce/'+contratInfos.annonce.id" [cssClass]="'qrcode w-[148px] h-[148px] m-auto hidden print:block'"  [errorCorrectionLevel]="'M'"></qrcode>
+
     
     
     
